--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-20 16:12:42
+ * @since 2021-12-28 14:16:18
  */
  -->
  <!DOCTYPE html>
@@ -195,10 +195,10 @@
 
 
 
-        <div class="layui-row form-row" id="random-2439-content">
+        <div class="layui-row form-row" id="random-0529-content">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs12 form-column"  style="padding-top: 0px" >
+            <div class="layui-col-xs12 form-column" >
 
 
                     <div class="layui-form-item" >
