--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -761,7 +761,10 @@ function ListPage() {
 		}
 		var action=admin.getTempData('#(formDataKey)-form-action');
 		var queryString="";
-		if(data && data.#(idPropertyName)) queryString="?" + #(paramQueryString);
+		if(data && data.#(idPropertyName)) queryString=#(paramQueryString);
+		if(window.pageExt.list.makeFormQueryString) {
+			queryString=window.pageExt.list.makeFormQueryString(data,queryString,action);
+		}
 		admin.putTempData('#(formDataKey)', data);
 		var area=admin.getTempData('#(formAreaKey)');
 		var height= (area && area.height) ? area.height : ($(window).height()*0.6);
@@ -778,7 +781,7 @@ function ListPage() {
 			area: ["#(formWindow.width)",height+"px"],
 			type: 2,
 			id:"#(formDataKey)-win",
-			content: '#(formURI)' + queryString,
+			content: '#(formURI)' + (queryString?("?"+queryString):""),
 			finish: function () {
 				refreshTableData();
 			}
