--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract_performance/contract_performance_list.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract_performance/contract_performance_list.html
@@ -2,7 +2,7 @@
 /**
  * 合同履行情况 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-08 17:04:16
+ * @since 2021-12-28 14:20:20
  */
  -->
  <!DOCTYPE html>
@@ -19,47 +19,43 @@
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
+        .layui-card-body .layui-table {
+            margin:0px;
+        }
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
 
 <body style="overflow-y: hidden">
 
-<div class="layui-card">
+<div class="layui-card-no-shadow ">
 
-    <div class="layui-card-body" style="">
+    <div class="layui-card-body" style="padding:0px">
 
-        <div class="search-bar" style="">
+        <div class="search-bar" style=" display: none; ">
 
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- id , id ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('id')}" class="search-label id-label">id</span><span class="search-colon">:</span></div>
-                        <input id="id" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 合同ID , contractId ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同ID')}" class="search-label contractId-label">合同ID</span><span class="search-colon">:</span></div>
-                        <input id="contractId" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
+                    <!-- id , id ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同ID , contractId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 概述 , title ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('概述')}" class="search-label title-label">概述</span><span class="search-colon">:</span></div>
                         <input id="title" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 履约细节 , detail ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 履约细节 , detail ,typeName=text_area, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('履约细节')}" class="search-label detail-label">履约细节</span><span class="search-colon">:</span></div>
                         <input id="detail" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 履约时间 , performanceTime ,typeName=date_input, isHideInSearch=false -->
+                    <!-- 履约日期 , performanceTime ,typeName=date_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('履约时间')}" class="search-label performanceTime-label">履约时间</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('履约日期')}" class="search-label performanceTime-label">履约日期</span><span class="search-colon">:</span></div>
                             <input type="text" id="performanceTime"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
                     </div>
 
@@ -74,7 +70,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 42px ">
+        <div style="margin-top: 0px ">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
