--- a/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产盘点 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-11-22 10:21:58
+ * @since 2022-01-04 12:33:27
  */
  -->
  <!DOCTYPE html>
@@ -12,16 +12,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
     <title th:text="${lang.translate('资产盘点')}">资产盘点</title>
+    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
+    <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon"> <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
-    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
     </style>
+    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
 
 <body style="overflow-y: hidden">
@@ -37,6 +40,7 @@
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
                     <!-- 类型 , type ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 所属 , ownerCode ,typeName=text_input, isHideInSearch=true -->
                     <!-- 业务状态 , status ,typeName=select_box, isHideInSearch=true -->
                     <!-- 盘点状态 , inventoryStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
@@ -46,19 +50,23 @@
                     <!-- 数据状态 , dataStatus ,typeName=select_box, isHideInSearch=true -->
                     <!-- 全员盘点 , allEmployee ,typeName=select_box, isHideInSearch=true -->
                     <!-- 资产状态 , assetStatus ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 资产分类 , categoryId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 资产分类 , categoryId ,typeName=text_area, isHideInSearch=true -->
                     <!-- 所属公司 , ownCompanyId ,typeName=button, isHideInSearch=true -->
                     <!-- 使用公司/部门 , useOrganizationId ,typeName=button, isHideInSearch=true -->
-                    <!-- 位置 , positionId ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 仓库 , warehouseId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 存放位置 , positionId ,typeName=text_area, isHideInSearch=true -->
+                    <!-- 仓库 , warehouseId ,typeName=text_area, isHideInSearch=true -->
                     <!-- 购置开始日期 , purchaseStartDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 购置结束日期 , purchaseEndDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 盘点开始时间 , startTime ,typeName=date_input, isHideInSearch=true -->
                     <!-- 盘点结束时间 , finishTime ,typeName=date_input, isHideInSearch=true -->
                     <!-- 制单人 , originatorId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 计划编号 , planId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 保管人 , inventoryManagerIds ,typeName=button, isHideInSearch=true -->
                     <!-- 盘点人 , inventoryUserIds ,typeName=button, isHideInSearch=true -->
                     <!-- 负责人 , inventoryDirectorIds ,typeName=button, isHideInSearch=true -->
+                    <!-- 仓库 , warehouseIds ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 位置 , positionIds ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 资产分类 , categoryIds ,typeName=select_box, isHideInSearch=true -->
                     <!-- 业务编码 , businessCode ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('业务编码')}" class="search-label businessCode-label">业务编码</span><span class="search-colon">:</span></div>
@@ -144,6 +152,8 @@
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
     var AUTH_PREFIX="eam_inventory";
 
+    // OWNER_CODE
+    var OWNER_CODE = [[${ownerCode}]] ;
 
 </script>
 
