--- a/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/inventory/inventory_list.html
@@ -133,10 +133,9 @@
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
+    <button class="layui-btn layui-btn-xs layui-btn-danger ops-inventoryDetail-button " lay-event="inventoryDetail" th:text="${lang.translate('明细')}" data-id="{{d.id}}">明细</button>
     <button th:if="${perm.checkAuth('eam_inventory:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button " lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
     <button th:if="${perm.checkAnyAuth('eam_inventory:update','eam_inventory:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button " lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
-
-
     <button th:if="${perm.checkAuth('eam_inventory:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button " lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
 
@@ -154,6 +153,11 @@
 
     // OWNER_CODE
     var OWNER_CODE = [[${ownerCode}]] ;
+
+
+
+
+
 
 </script>
 
