--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
@@ -52,6 +52,12 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
+
+
+
+    <button  class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="detail" th:text="${lang.translate('详情')}" data-id="{{d.id}}">详情</button>
+
+
 </script>
 
 
