完善功能,报废流程

--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_form.html
@@ -127,6 +127,8 @@
     var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务日期","inputType":"date_input"},"scrapDate":{"date":true,"labelInForm":"报废时间","inputType":"date_input","required":true},"name":{"labelInForm":"业务名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="eam_asset_scrap";
 
+    var PAGE_TYPE = [[${pageType}]] ;
+
     // 单据ID
     var BILL_ID = [[${billId}]] ;
     // 单据类型
