--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_list.html
@@ -121,7 +121,11 @@
 
     <button th:if="${perm.checkAuth('eam_asset_scrap:clean-out')}" class="layui-btn layui-btn-xs  clean-out-button " lay-event="clean-out" th:text="${lang.translate('清理')}" data-id="{{d.id}}">清理</button>
 
-    <button th:if="${perm.checkAuth('eam_asset_scrap:bill')}"class="layui-btn layui-btn-xs  download-bill-button " lay-event="download-bill" th:text="${lang.translate('单据')}" data-id="{{d.id}}">单据</button>
+    <button th:if="${perm.checkAuth('eam_asset_scrap:bill')}" class="layui-btn layui-btn-xs  download-bill-button " lay-event="download-bill" th:text="${lang.translate('单据')}" data-id="{{d.id}}">单据</button>
+
+
+    <button th:if="${perm.checkAuth('eam_asset_scrap:agree')}"  id="agree-button" class="layui-btn layui-btn-xs                   agree-button" lay-event="agree" data-id="{{d.id}}"><i class="layui-icon"></i><span th:text="${lang.translate('同意')}"同意</span></button>
+    <button th:if="${perm.checkAuth('eam_asset_scrap:deny')}"  id="deny-button" class="layui-btn layui-btn-xs  layui-btn-danger  deny-button" lay-event="deny" data-id="{{d.id}}"><i class="layui-icon"></i><span th:text="${lang.translate('拒绝')}">拒绝</span></button>
 
 </script>
 
@@ -129,13 +133,13 @@
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
 
-
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
 
     var CLEAN_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
 
     var AUTH_PREFIX="eam_asset_scrap";
 
+    var PAGE_TYPE = [[${pageType}]] ;
     // 是否需要审批
     var APPROVAL_REQUIRED = [[${approvalRequired}]] ;
 
