--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_collect_error.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_collect_error.html
@@ -10,7 +10,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('主机资源')}">主机资源</title>
+    <title th:text="${lang.translate('报错列表')}">报错列表</title>
     <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
     <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -20,8 +20,7 @@
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
-    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
-    <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
+
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
     <style>
     </style>
@@ -92,8 +91,8 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var AUTH_PREFIX="eam_report_org";
 </script>
-<script th:src="'/business/ops/monitor_node_resource/monitor_node_host_list.js?'+${cacheKey}"></script>
-<script th:src="'/business/ops/monitor_node_resource/monitor_node_host_list_ext.js?'+${cacheKey}"></script>
+<script th:src="'/business/ops/monitor_node_resource/monitor_node_collect_error.js?'+${cacheKey}"></script>
+<script th:src="'/business/ops/monitor_node_resource/monitor_node_collect_error_ext.js?'+${cacheKey}"></script>
 
 </body>
 </html>
